# Proyecto-Rendimiento-Arquitectura

./: .clang-format  CMakeLists.txt  README.md  a.out  build.sh  main.cpp  perfeslarge.sh  perfessmall.sh  runenergy.sh  runftest.sh  runutest.sh
fluid/: CMakeLists.txt  fluid.cpp
ftest/: CMakeLists.txt  filesComparator.cpp  fluid  fluid_test.cpp  testFluid.sh  trazas.cpp
ftest/ejecutables/: fluid  ftest
ftest/files_fld/: BadParticlesLess.fld  BadParticlesMore.fld
ftest/scripts/: test1-error.sh  test1.sh  test1L.sh  test1S.sh  test2-error.sh  test2L.sh  test2S.sh  test3-error.sh  test3L.sh  test3S.sh  test4-error.sh  test4L.sh  test4S.sh  test5-error.sh  test5L.sh  test5S.sh  test6-error.sh
sim/: CMakeLists.txt  block.cpp  block.h  block.hpp  constantes.cpp  constantes.hpp  grid.cpp  grid.hpp  progargs.cpp  progargs.hpp  simulacion.cpp  simulacion.hpp
utest/: CMakeLists.txt  block_test.cpp  grid_test.cpp  progargs_test.cpp  simulation_test.cpp
